Refactor project to Next.js architecture and enhance functionality
- Migrated the project to Next.js for improved server-side rendering and SEO capabilities.
- Added internationalization support with next-i18next for multi-language functionality.
- Implemented new API routes for playlist details and search functionality.
- Removed the previous Express server and integrated API handling directly within Next.js.
- Updated package.json and package-lock.json to reflect new dependencies and versioning.
- Enhanced the README and documentation to reflect architectural changes and new features.
- Added .vercelignore and vercel.json for deployment configuration on Vercel.
- Introduced new components for language switching and SEO optimization.

--- a/docs/使用指南.md
+++ b/docs/使用指南.md
@@ -4,16 +4,18 @@
 
 ### 1. 启动服务
 
+**开发模式（推荐）：**
 ```bash
+npm run dev
+```
+
+**生产模式：**
+```bash
+npm run build
 npm start
 ```
 
-服务启动后，会显示：
-```
-🎵 音乐下载服务已启动！
-📡 服务地址: http://localhost:3000
-💡 请在浏览器中打开上述地址使用
-```
+服务启动后，访问 `http://localhost:3000`
 
 ### 2. 使用流程
 
@@ -97,33 +99,49 @@ npm start
 
 ## 技术栈
 
-### 后端
-- **Node.js** - JavaScript运行环境
-- **Express** - Web服务器框架
+### 框架与核心
+- **Next.js 13** - React 服务端渲染框架
+- **React 18** - 用户界面库
+- **TypeScript** - 类型安全的 JavaScript
 - **NeteaseCloudMusicApi** - 网易云音乐API封装
 
-### 前端
-- **原生HTML/CSS/JavaScript** - 无需任何框架
+### 前端技术
+- **React Hooks** - 状态管理与生命周期
 - **Fetch API** - 网络请求
-- **现代CSS** - Grid、Flexbox、动画等
+- **JSZip** - 本地 ZIP 打包（浏览器端）
+- **CSS** - Spotify 深色主题，响应式布局
+
+### SEO 优化
+- **SSR/ISR** - 服务端渲染与增量静态生成
+- **JSON-LD** - 结构化数据（WebSite、MusicPlaylist、FAQPage）
+- **动态 meta** - 每个页面独立的 SEO 标签
+- **GTM** - Google Tag Manager 埋点
 
 ## 开发相关
 
 ### 项目结构
 ```
 music-download/
-├── server.js           # 后端服务器（Express + API封装）
-├── package.json        # 项目依赖配置
-├── README.md          # 项目说明
-├── 使用指南.md        # 本文件
-└── public/            # 前端静态文件
-    ├── index.html     # 主页面
-    ├── style.css      # 样式表
-    └── app.js         # 前端逻辑
+├── pages/                # Next.js 页面与 API Routes
+│   ├── index.tsx         # 首页
+│   ├── search/[q].tsx    # 搜索页
+│   ├── playlist/[id].tsx # 歌单详情页
+│   ├── docs/             # 文档页面
+│   └── api/              # API Routes
+├── lib/                  # 工具库
+│   └── seo.ts            # SEO 配置
+├── styles/               # 样式文件
+│   └── globals.css       # 全局样式
+├── public/               # 静态资源
+│   ├── jszip.min.js      # 本地 JSZip
+│   └── remixicon.*       # 图标字体
+├── next.config.js        # Next.js 配置
+├── tsconfig.json         # TypeScript 配置
+└── package.json          # 项目依赖
 ```
 
 ### 开发模式
-如果需要修改代码并自动重启服务器：
+修改代码后自动热更新（Fast Refresh）：
 
 ```bash
 npm run dev
@@ -152,6 +170,16 @@ GET /api/song/detail?ids=歌曲ID1,歌曲ID2
 ```
 
 ## 更新日志
+
+### v2.0.0 (2025-10-27) - 重大重构
+- 🔥 **架构升级**：Express 静态服务 → Next.js SSR
+- 🔥 **技术栈**：原生 JS → TypeScript + React
+- 🔥 **路由系统**：Hash 路由 → 无 hash 路由（SEO 友好）
+- ✨ **SEO 优化**：JSON-LD、动态 meta、sitemap、robots.txt
+- ✨ **GTM 埋点**：集成 Google Tag Manager 事件追踪
+- ✨ **文档页面**：使用教程（/docs/guide）、音质科普（/docs/quality）
+- ✨ **ISR 支持**：增量静态再生成，提升性能
+- ⚠️ **注意**：播放器部分功能正在完善中（进度条拖动、音量控制、上下曲切换）
 
 ### v1.0.0 (2025-10-24)
 - ✨ 首次发布
