--- a/docs/播放器使用说明.md
+++ b/docs/播放器使用说明.md
@@ -4,30 +4,46 @@
 
 蓉儿为靖哥哥添加了一个**超级酷炫的底部音乐播放器**！现在可以先试听再决定是否下载啦！
 
+> ⚠️ **v2.0 更新说明**：项目已重构为 Next.js 架构，播放器部分功能正在完善中。
+
 ---
 
 ## 🎯 播放器功能清单
 
 ### 1. **基础播放控制**
-- ▶️ **播放/暂停**：一键切换
-- ⏮ **上一首**：播放列表中的上一首
-- ⏭ **下一首**：播放列表中的下一首
-- ✕ **关闭播放器**：关闭并停止播放
+- ✅ ▶️ **播放/暂停**：一键切换
+- 🚧 ⏮ **上一首**：播放列表中的上一首（开发中）
+- 🚧 ⏭ **下一首**：播放列表中的下一首（开发中）
+- ✅ ✕ **关闭播放器**：关闭并停止播放
 
 ### 2. **进度控制**
-- 📊 **实时进度条**：显示当前播放进度
-- 🕐 **时间显示**：当前时间 / 总时长
-- 🎯 **拖动跳转**：拖动进度条快速跳转
+- ✅ 📊 **实时进度条**：显示当前播放进度
+- 🚧 🕐 **时间显示**：当前时间 / 总时长（开发中）
+- 🚧 🎯 **拖动跳转**：拖动进度条快速跳转（开发中）
 
 ### 3. **音量控制**
-- 🔊 **音量调节**：0-100% 自由调节
-- 🔇 **一键静音**：点击音量图标快速静音/恢复
-- 🔉 **图标变化**：根据音量自动切换图标
+- 🚧 🔊 **音量调节**：0-100% 自由调节（开发中）
+- 🚧 🔇 **一键静音**：点击音量图标快速静音/恢复（开发中）
+- 🚧 🔉 **图标变化**：根据音量自动切换图标（开发中）
 
 ### 4. **智能提示**
-- ⚠️ **VIP歌曲标识**：自动识别并提示试听版
-- 🎵 **播放日志**：记录播放状态到下载日志
-- 🎨 **动态封面**：显示当前歌曲封面
+- ✅ ⚠️ **VIP歌曲标识**：自动识别并提示试听版
+- ✅ 🎵 **播放日志**：记录播放状态到下载日志
+- ✅ 🎨 **动态封面**：显示当前歌曲封面
+
+### 当前可用功能（v2.0）
+- ✅ 播放/暂停控制
+- ✅ 实时进度显示
+- ✅ 动态封面与歌曲信息
+- ✅ 关闭播放器
+- ✅ VIP 歌曲识别
+
+### 即将完善功能
+- 🚧 进度条拖动跳转
+- 🚧 时间显示（当前/总时长）
+- 🚧 上一首/下一首切换
+- 🚧 音量控制与静音
+- 🚧 播放结束自动下一首
 
 ---
 
@@ -54,34 +70,34 @@
 
 ### 方法2：使用播放器控制
 
-1. **播放/暂停**
+1. **播放/暂停** ✅
    ```
-   点击中间的大圆按钮
+   点击播放按钮
    ▶️ = 播放
    ⏸ = 暂停
    ```
 
-2. **切换歌曲**
+2. **切换歌曲** 🚧
    ```
-   ⏮ 上一首：播放前一首歌曲
-   ⏭ 下一首：播放后一首歌曲
-   播放完自动下一首
-   ```
-
-3. **调节进度**
-   ```
-   拖动进度条可以快速跳转
-   左边显示当前时间
-   右边显示总时长
+   ⏮ 上一首：播放前一首歌曲（开发中）
+   ⏭ 下一首：播放后一首歌曲（开发中）
+   播放完自动下一首（开发中）
    ```
 
-4. **调节音量**
+3. **调节进度** 🚧
    ```
-   拖动音量滑块：0-100%
-   点击🔊图标：快速静音/恢复
+   拖动进度条可以快速跳转（开发中）
+   左边显示当前时间（开发中）
+   右边显示总时长（开发中）
    ```
 
-5. **关闭播放器**
+4. **调节音量** 🚧
+   ```
+   拖动音量滑块：0-100%（开发中）
+   点击🔊图标：快速静音/恢复（开发中）
+   ```
+
+5. **关闭播放器** ✅
    ```
    点击右上角的 ✕ 按钮
    播放器滑下隐藏
@@ -260,11 +276,21 @@
 
 ---
 
-## 🚧 未来计划（敬请期待）
+## 🚧 开发计划
 
+### 高优先级（v2.1）
+- [ ] 进度条拖动与时间显示
+- [ ] 上一首/下一首切换
+- [ ] 音量控制与静音
+- [ ] 播放结束自动下一首
+- [ ] 音频错误处理
+
+### 中优先级（v2.2）
 - [ ] 键盘快捷键支持
-- [ ] 播放列表管理
 - [ ] 循环/随机播放模式
+- [ ] 播放列表管理
+
+### 低优先级（未来）
 - [ ] 歌词显示
 - [ ] 迷你模式
 - [ ] 音效均衡器
@@ -272,6 +298,10 @@
 - [ ] 收藏歌曲功能
 
 ---
+
+## 📝 v2.0 版本说明
+
+项目已完成从原生 JS 到 Next.js 的架构重构，播放器正在逐步迁移中。当前版本保留了核心的试听功能，更多高级功能将在后续版本陆续补全。
 
 **享受音乐，享受蓉儿为你打造的听歌体验！** 🎵✨
 
