Enhance internationalization and button styling across the application
- Updated text elements in the Home and Playlist pages to utilize internationalization for better language support.
- Improved button styling by implementing a unified button system, ensuring consistent design and functionality.
- Added new translations for alerts, playlist details, and button labels in both English and Chinese locales.
- Refactored button classes to follow the new design principles, enhancing user experience and accessibility.

--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -3,6 +3,15 @@
   "subtitle": "Search, preview and batch download playlists",
   "hotPlaylist": {
     "title": "Hot Playlists"
+  },
+  "order": {
+    "hot": "Hot",
+    "new": "Latest"
+  },
+  "noData": "No data available",
+  "playCount": {
+    "hundredMillion": "B",
+    "tenThousand": "W"
   }
 }
 
