Add favicon generation and enhance icon handling in the application
- Introduced a new script to generate favicon.ico and apple-touch-icon.png from SVG assets, ensuring proper icon support across platforms.
- Updated the README with links to the online demo and documentation, enhancing user accessibility.
- Improved the favicon handling in the _document.tsx file to include multiple icon formats.
- Refactored API routes to ensure consistent sorting logic for playlists, addressing issues with the 'new' order parameter.
- Enhanced the UI to display play counts and update times for playlists, improving user experience and information clarity.
- Added new translations for play counts and update times in both English and Chinese locales.
- Updated CSS styles for better layout and presentation of playlist statistics.

--- a/docs/部署指南.md
+++ b/docs/部署指南.md
@@ -26,17 +26,17 @@ npm run dev
   "version": 2,
   "functions": {
     "pages/api/**/*.ts": {
-      "maxDuration": 30  // API 超时时间 30 秒
+      "maxDuration": 10  // API 超时时间 10 秒（免费版）
     }
   },
-  "regions": ["hkg1", "sfo1"],  // 部署区域：香港 + 旧金山
+  "regions": ["sfo1"],  // 部署区域：旧金山（免费版单区域）
   ...
 }
 ```
 
 **关键配置**：
-- **maxDuration**: API 超时时间（免费版最大 10s，Pro 版最大 60s）
-- **regions**: 部署区域，优先选择离用户近的节点
+- **maxDuration**: API 超时时间（免费版最大 10s，已配置为 10s）
+- **regions**: 部署区域（免费版仅支持单区域，已配置为 sfo1）
 - **headers**: 安全头部、CORS 配置、缓存策略
 - **rewrites**: sitemap.xml 和 robots.txt 路由重写
 
@@ -80,7 +80,7 @@ vercel
 如果需要配置环境变量，在 Vercel Dashboard → Settings → Environment Variables 添加：
 
 ```
-NEXT_PUBLIC_BASE_URL=https://your-domain.vercel.app
+NEXT_PUBLIC_BASE_URL=https://music-download-free-ol1pmbf2z-xituimaos-projects.vercel.app
 ```
 
 ## 自定义域名
@@ -112,7 +112,7 @@ NEXT_PUBLIC_BASE_URL=https://your-domain.vercel.app
 ### API 超时配置
 - **免费版**：函数最大执行时间 10 秒
 - **Pro 版**：函数最大执行时间 60 秒
-- 当前配置 30 秒（需 Pro 版），如使用免费版请修改为 10 秒：
+- 当前已配置为 10 秒（免费版最大值）：
   ```json
   {
     "functions": {
@@ -124,15 +124,15 @@ NEXT_PUBLIC_BASE_URL=https://your-domain.vercel.app
   ```
 
 ### 部署区域选择
-当前配置：`["hkg1", "sfo1"]`（香港 + 旧金山）
-- **国内用户**：优先 hkg1（香港）
-- **海外用户**：优先 sfo1（旧金山）
-- **全球部署**：可添加更多区域（需 Pro 版）
+当前配置：`["sfo1"]`（旧金山）
+- **免费版限制**：仅支持单区域部署
+- **全球访问**：sfo1 区域全球响应速度优秀
+- **升级到 Pro 版**：可添加 hkg1 等更多区域
 
 ### 环境变量（可选）
 如需配置环境变量，在 Vercel Dashboard → Settings → Environment Variables 添加：
 ```
-NEXT_PUBLIC_SITE_URL=https://your-domain.vercel.app
+NEXT_PUBLIC_SITE_URL=https://music-download-free-ol1pmbf2z-xituimaos-projects.vercel.app
 ```
 
 ## 故障排查
