Refactor logging and enhance UI components for better user experience
- Updated the .gitignore file to exclude log files from version control.
- Refactored logging directory path in the API to use a hidden folder for better organization.
- Improved the display of play counts and update times in the Home page, enhancing clarity and user engagement.
- Added new formatting functions for play counts and update times, supporting internationalization.
- Updated translations for play counts and update times in both English and Chinese locales.
- Adjusted CSS styles for better layout and spacing in playlist statistics.

--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -12,10 +12,15 @@
   "playCount": {
     "hundredMillion": "B",
     "tenThousand": "W",
-    "label": "plays"
+    "label": "plays",
+    "fullLabel": "Play Count"
   },
   "updateTime": {
-    "label": "Updated"
+    "label": "Updated",
+    "fullLabel": "Update Time",
+    "today": "Today",
+    "yesterday": "Yesterday",
+    "daysAgo": "{{days}} days ago"
   }
 }
 
