--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -7,7 +7,8 @@
   "nav": {
     "home": "Home",
     "guide": "User Guide",
-    "licenses": "Open Source"
+    "licenses": "Open Source",
+    "sitemap": "Sitemap"
   },
   "footer": {
     "text": "Made with ❤️ by Rong'er | For educational purposes only"
