--- a/public/locales/zh/common.json
+++ b/public/locales/zh/common.json
@@ -7,7 +7,8 @@
   "nav": {
     "home": "首页",
     "guide": "使用指南",
-    "licenses": "开源依赖"
+    "licenses": "开源依赖",
+    "sitemap": "站点地图"
   },
   "footer": {
     "text": "Made with ❤️ by 蓉儿 | 仅供学习交流使用"
