feat(api & components): enhance user experience with detailed logging and load more functionality - Updated NeteaseCloudMusicApi dependency to version 4.28.0 for improved API interactions. - Added detailed logging in QR login and song URL APIs to facilitate debugging. - Implemented a "Load More" feature in the playlist component to dynamically fetch additional songs, improving user navigation. - Enhanced playlist server-side rendering to include total track count for better client-side loading management. - Introduced new styles for the load more button to enhance UI consistency.

--- a/public/locales/en/playlist.json
+++ b/public/locales/en/playlist.json
@@ -2,7 +2,9 @@
   "actions": {
     "selectAll": "Select All",
     "deselectAll": "Cancel",
-    "download": "Download"
+    "download": "Download",
+    "loading": "Loading...",
+    "loadMore": "Load More ({{current}}/{{total}})"
   },
   "fee": {
     "vip": "VIP",
